# anchor-skeleton

./: .gitignore  Anchor.toml  Justfile  README.md
.github/workflows/: ci.yml
programs/contract-skeleton/: Cargo.toml  build.rs
programs/contract-skeleton/examples/: create_pool.rs
programs/contract-skeleton/src/: constraints.rs  errors.rs  lib.rs  utils.rs
programs/contract-skeleton/src/contexts/: create_pool.rs  mod.rs  user_do_nothing.rs
programs/contract-skeleton/src/states/: pool.rs
programs/contract-skeleton/tests/: create_pool.rs  user_do_nothing.rs
programs/contract-skeleton/tests/utils/: mod.rs
