[package]
description = "Created with Anchor"
edition = "2018"
name = "contract-skeleton"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract_skeleton"

[features]
cpi = ["no-entrypoint"]
default = []
dev = []
no-entrypoint = []
no-idl = []

[dependencies]
anchor-lang = "0.18"
anchor-spl = "0.18"
fehler = "1"

[dev-dependencies]
anchor-client = {version = "0.18"}
anyhow = {version = "1"}
env_logger = "0.9"
gfx-solana-utils = "0.2"
solana-client = {version = "1"}
solana-logger = "1"
solana-sdk = {version = "1"}
spl-associated-token-account = "1"
spl-token = {version = "3", features = ["no-entrypoint"]}

[build-dependencies]
gfx-solana-utils = "0.2"
solana-sdk = "1"
